MOSIP-34475 Changed code as per review comment
Signed-off-by: kameshsr <kameshsr1338@gmail.com>