@@ -6,12 +6,11 @@ import io.mosip.resident.exception.ResidentServiceCheckedException;
 import org.json.JSONException;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.env.Environment;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 
 /**
@@ -21,25 +20,20 @@ import java.util.Map;
 @Component
 public class ValidateSameData {
 
-    @Autowired
-    private Environment environment;
-
     private static final String AND_LANGUAGE_CODE = " and Language code: ";
-    public static final String EXCLUDED_ATTRIBUTE_LIST = "mosip.identity.get.excluded.attribute.list";
-    private static final String DEFAULT_ATTRIBUTE_LIST = "UIN,verifiedAttributes,IDSchemaVersion";
+
+    @Value("${listOfExcludedAttributeList:UIN}")
+    private String[] valuesOfExcludedAttributeList;
 
     public void validateSameData(JSONObject idRepoJson, JSONObject identity) throws ResidentServiceCheckedException, JSONException {
         for (Object keyObj : identity.keySet()) {
             String key = (String) keyObj;
 
-            String excludedAttributeListProperty = environment.getProperty(EXCLUDED_ATTRIBUTE_LIST, DEFAULT_ATTRIBUTE_LIST);
-            List<String> excludedListPropertyList = List.of(excludedAttributeListProperty.split(ResidentConstants.COMMA));
-            if(excludedListPropertyList.contains(key)){
+            if(Arrays.asList(valuesOfExcludedAttributeList).contains(key)){
                 continue;
             }
 
             Object identityValue = identity.get(key);
-
             if (identityValue instanceof String) {
                 if (idRepoJson.containsKey(key) && idRepoJson.get(key).toString().equalsIgnoreCase((String) identityValue)) {
                     throw new ResidentServiceCheckedException(ResidentErrorCode.SAME_ATTRIBUTE_ALREADY_PRESENT.getErrorCode(),
